--- a/movieapp/templates/base.html
+++ b/movieapp/templates/base.html
@@ -14,7 +14,9 @@
         <nav class="navbar bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand text-white" href="#">Movie App</a>
+                <a class="btn btn-primary" href="add/">Add Movie</a>
             </div>
+            
       </nav>
    </header>
    <main class="container">
